# token-diet

./: .gitignore  LICENSE  PLAYBOOK.md  PLAYBOOK.ru.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
datasets/: api_response.json  config.json  events.json  org_tree.json  product_catalog.json  users.json
results/: leaderboard.md  results.json
tests/: test_bench.py  test_cli.py  test_encoders.py
token_diet/: __init__.py  bench.py  cli.py  diet.py  encoders.py  render.py  tokenizers.py
web/: app.js  index.html  styles.css
